k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fallback-404
spec:
  selector:
    app: fallback-404
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
